Revert "[FIX] noHits found" Alignments start from Hit Nr. 51
This reverts commit 0ae907529199cd95f011c93bcc674e1f966419b6.

--- a/public/styles/blast-visualization.css
+++ b/public/styles/blast-visualization.css
@@ -425,11 +425,10 @@ table.dataTable.no-footer{
 }
 
 .noHits{
-    width: 15em;
-    margin-top: 3em !important;
+    width: 5em;
+    margin-top: 3em;
     margin: 0 auto;
     margin-bottom: 1em;
-    font-size: 1.2em;
 }
 
 .noHitsWide{
